--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -12,7 +12,7 @@
   width: 100% !important;
 }
 ::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */  
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: white;
   opacity: 1; /* Firefox */
 }
@@ -28,6 +28,14 @@
 }
 input:focus::placeholder {
   color: transparent;
+}
+#landingImage {
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  background-color: black;
 }
 
 .input {
