--- a/styles/about.css
+++ b/styles/about.css
@@ -124,3 +124,8 @@
   height: 50px;
   object-fit: cover;
 }
+
+#mywork {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    Liberation Mono, Courier New, monospace;
+}
