--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -194,7 +194,7 @@ body {
 .siteLogo {
   font-family: "Metal Mania", cursive;
   font-size: 80px;
-  background: -webkit-linear-gradient(#1a1a1a, #333);
+  background: -webkit-linear-gradient(#010103, #333);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
