--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -123,7 +123,8 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #000;
+  background: rgb(27, 27, 27);
+
   z-index: 9999;
 }
 
@@ -136,6 +137,7 @@ html {
     display: inline-block;
     margin: 0 5px;
     color: #fff;
+
     font-family: "Quattrocento Sans", sans-serif;
     @for $i from 0 through 6 {
       &:nth-child(#{$i + 1}) {
@@ -143,6 +145,9 @@ html {
         animation: blur-text 1.5s (#{$i/5}) + s infinite linear alternate;
       }
     }
+  }
+  span img {
+    width: 80%;
   }
 }
 
@@ -161,6 +166,7 @@ body {
   padding: 0;
   min-height: 100%;
   position: relative;
+
   background: linear-gradient(184deg, #010103, #1a1a1a, #262626);
 }
 .header {
