--- a/styles/modal.css
+++ b/styles/modal.css
@@ -4,11 +4,17 @@ select {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
   box-sizing: border-box;
+  border-top-style: hidden;
+  border-right-style: hidden;
+  border-left-style: hidden;
+  border-bottom-style: groove;
+  border-bottom: 2px solid #ccc;
 }
-
+.contacts-page input[type="text"],
+select:focus {
+  outline: none;
+}
 .contacts-page input[type="submit"] {
   width: 100%;
   color: white;
@@ -43,17 +49,15 @@ span.psw {
 
 .modal {
   position: fixed;
-  border-radius: 0% 100% 49% 51% / 58% 30% 70% 42%;
-  border: 1px solid purple;
-  z-index: 1;
-
-  box-shadow: inset 0 0 10px #f8a100;
-
+  z-index: 1000000000;
   left: 0;
   top: 0;
+  justify-content: center;
+  text-align: center;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: inherit !important;
+  background-color: rgba(255, 255, 255, 0.3);
   padding-top: 60px;
 }
 
