--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -138,7 +138,7 @@ body {
 }
 
 .p__opensans {
-  font-family: "Oswald", sans-serif;
+  font-family: "Metal Mania", cursive !important;
   font-weight: 400;
   font-size: 20px;
   letter-spacing: 0.04em;
