--- a/styles/about.css
+++ b/styles/about.css
@@ -10,6 +10,91 @@
   margin-top: 5%;
   align-items: center;
 }
+@-webkit-keyframes wiggle {
+  0% {
+    transform: rotateZ(2deg);
+  }
+  50% {
+    transform: rotateZ(-2deg);
+  }
+  100% {
+    transform: rotateZ(2deg);
+  }
+}
+
+@mixin iconTransition {
+  transition: all 100ms cubic-bezier(0.42, 0, 0.58, 1); /* ease-in-out */
+}
+
+@mixin wiggler {
+  animation-name: wiggle;
+  animation-duration: 0.4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+}
+
+.wrapp {
+  width: 30%;
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+.social {
+  font-size: 2.5em;
+  height: 55px;
+  overflow: hidden;
+  border-bottom: 0.5px solid #abc;
+}
+
+i {
+  position: relative;
+  top: 30px;
+  cursor: pointer;
+
+  margin: 0 10px;
+  @include iconTransition;
+
+  &:hover {
+    top: 5px;
+  }
+}
+
+.fb {
+  color: #3b5998;
+}
+
+.tw {
+  color: #09aeec;
+}
+
+.yt {
+  color: #aa2a25;
+}
+
+.dr {
+  color: #ea4c89;
+}
+
+.sk {
+  color: #00a5e6;
+}
+
+.db {
+  color: #000;
+}
+
+.apple {
+  color: #ccc;
+}
 
 .staffCard {
   background: rgb(55, 53, 52);
