--- a/styles/modal.css
+++ b/styles/modal.css
@@ -11,12 +11,23 @@ select {
   border-bottom-style: groove;
   border-bottom: 2px solid #ccc;
 }
+.contacts-page input[type="email"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  box-sizing: border-box;
+  border-top-style: hidden;
+  border-right-style: hidden;
+  border-left-style: hidden;
+  border-bottom-style: groove;
+  border-bottom: 2px solid #ccc;
+}
 .contacts-page input[type="text"],
 select:focus {
   outline: none;
 }
 .contacts-page input[type="submit"] {
-  width: 10%;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -48,16 +59,13 @@ span.psw {
 }
 
 .modal {
-  position: fixed;
   z-index: 1000000000;
-  left: 0;
-  top: 0;
-  right: 0;
+  position: fixed;
   width: 100%;
-  height: 100%v;
+  height: 100%;
   overflow: hidden !important;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), #262626),
-    url("../styles/assets/niffleheim.png");
+  background-color: #262626;
+  top: 0;
   background-repeat: no-repeat;
   background-size: cover;
 }
