--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -34,7 +34,8 @@ nav ul {
 nav ul li {
   margin: 0px;
   display: inline-block;
-
+  text-transform: uppercase;
+  font-weight: 800;
   font-family: "Metal Mania", cursive;
 }
 
