--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap");
 h1 {
   margin-top: 100px;
 }
@@ -35,8 +36,8 @@ nav ul li {
   margin: 0px;
   display: inline-block;
   text-transform: uppercase;
-  font-weight: 800;
-  font-family: "Metal Mania", cursive;
+  font-weight: 100;
+  font-family: "Rubik Distressed", cursive;
 }
 
 nav a {
@@ -59,21 +60,22 @@ nav li:hover {
   background-color: #333;
 }
 nav ul li {
-  background-color: #000000;
+  background: linear-gradient(180deg, #292f33, #1c1c1c);
 }
 nav ul li li a {
-  background-color: #333;
+  background-color: #292f33;
   border-bottom: 1px solid #b0903d;
   border-bottom: 1px solid transparent;
 
   transition: 0.3s ease;
 }
 nav ul li li a:hover {
-  background-color: #212121;
-  color: red;
+  color: #b0903d;
 }
 nav ul li a:hover {
-  background-color: #333;
+  background-color: #292f33;
+  color: #fff;
+  transition: background-color 0.3s ease;
 }
 #worldsLink {
   background-color: #212121;
@@ -118,7 +120,7 @@ li > a:only-child:after {
 /* Media Queries
 --------------------------------------------- */
 
-@media all and (max-width: 768px) {
+@media all and (max-width: 912px) {
   .postPage .midcolumn {
     margin-top: 35% !important;
     padding: 0 !important;
@@ -154,12 +156,13 @@ li > a:only-child:after {
     min-width: 55% !important;
   }
   nav ul li {
-    background-color: rgb(44, 44, 44);
+    background: transparent;
   }
   nav {
     margin: 15px !important;
-    background-color: rgb(44, 44, 44);
+    background-color: #212121;
     padding: 2%;
+    transition: 1s ease;
   }
   nav ul ul ul {
     width: 100%;
