--- a/styles/landingPage.scss
+++ b/styles/landingPage.scss
@@ -34,6 +34,7 @@
 .pc-window_component.is-home-main {
   width: 45vw;
   height: 38em;
+  margin: auto;
   -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
   transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
   transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1),
