--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Paytone+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap");
-@import url(https://fonts.googleapis.com/css?family=Quattrocento+Sans);
 html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   behavior: smooth;
@@ -14,6 +13,8 @@ html {
   overflow: auto;
   height: 100%;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Quattrocento+Sans);
 
 @mixin position-center($text-align: center) {
   position: absolute;
@@ -212,6 +213,9 @@ a {
 
   .rightcolumn,
   .initial-post {
+    width: 100% !important;
+  }
+  .searchPage {
     width: 100% !important;
   }
 }
