--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -78,12 +78,29 @@ article {
 .nav {
   display: block;
 }
-
+.next-btn {
+  width: 20% !important;
+  background-color: #1a1a1a;
+  text-transform: uppercase;
+  color: #b0903d;
+  font-weight: 800;
+  margin: 2% auto;
+  display: block;
+  height: 50px;
+  width: 100px;
+  cursor: pointer;
+  border: none;
+  border-color: #1a1a1a;
+  transition: 0.3s ease;
+}
+.next-btn:hover {
+  opacity: 0.7;
+}
 .nav ul li {
   line-height: 30px;
 }
 
-.nav ul li {
+#sideNav {
   color: #e3e2e2;
 }
 
@@ -127,6 +144,10 @@ article {
   }
   #products {
     padding-top: 0;
+  }
+  #play,
+  #pause {
+    display: none;
   }
   article header {
     margin-top: 5%;
