--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -29,7 +29,8 @@ nav ul {
   margin: 0 auto;
   list-style: none;
   position: relative;
-  width: 50%;
+  width: 100%;
+  margin-bottom: 2%;
   z-index: 1000;
 }
 
