--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -184,6 +184,73 @@ li > a:only-child:after {
     display: none;
   }
 
+  .burger {
+    position: relative;
+    justify-self: end;
+    cursor: pointer;
+    user-select: none;
+    z-index: 10;
+    width: 1.6rem;
+    height: 1.15rem;
+    border: none;
+    outline: none;
+    background: none;
+    visibility: visible;
+    transform: rotate(0deg);
+    transition: 0.35s ease;
+
+    // Responsive Media Query
+    @media only screen and (min-width: 36rem) {
+      display: none;
+      visibility: hidden;
+    }
+
+    &-line {
+      position: absolute;
+      display: block;
+      right: 0;
+      width: 100%;
+      height: 2.1px;
+      border: none;
+      outline: none;
+      opacity: 1;
+      border-radius: 1rem;
+      transform: rotate(0deg);
+      background-color: #b0903d;
+      transition: 0.25s ease-in-out;
+
+      &:nth-child(1) {
+        top: 0px;
+      }
+      &:nth-child(2) {
+        top: 0rem;
+        width: 90%;
+      }
+      &:nth-child(3) {
+        top: 0.6rem;
+      }
+      &:nth-child(4) {
+        top: 1rem !important;
+        background-color: transparent !important;
+      }
+    }
+
+    &.is-active .burger-line {
+      &:nth-child(1) {
+        top: 0.5rem;
+        transform: rotate(135deg);
+      }
+      &:nth-child(2) {
+        opacity: 0;
+        visibility: hidden;
+      }
+      &:nth-child(3) {
+        top: 0.5rem;
+        transform: rotate(-135deg);
+      }
+    }
+  }
+
   .toggle {
     display: block;
     padding: 0 20px;
