--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -667,7 +667,7 @@ hr {
   text-decoration: underline;
 }
 .inner_post_text button:hover {
-  color: blue;
+  color: #4ba6e7;
 
   transition: ease-in-out 0.3s;
 }
