--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,7 +34,7 @@ html {
   height: 100%;
   background: rgb(27, 27, 27);
 
-  z-index: 9999;
+  z-index: 99999999999999999999;
 }
 
 .loading-text {
