--- a/styles/modal.css
+++ b/styles/modal.css
@@ -64,7 +64,7 @@ span.psw {
   width: 100%;
   height: 100%;
   overflow: hidden !important;
-  background-color: #262626;
+  background-color: #262626 !important;
   top: 0;
   background-repeat: no-repeat;
   background-size: cover;
