--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -201,7 +201,7 @@ article {
 .search-submit {
   /* this class is for submit button, if in your code its different, just substitute the class name '.search-submit' */
   background-color: #1a1a1a;
-  color: #ffffff;
+  color: #f9b22a;
   font-weight: 700;
   text-decoration: none;
   white-space: normal;
