--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -1078,14 +1078,13 @@ h2 {
   }
 }
 blockquote {
-  background: #fcfcfc;
-  border-left: 1px solid silver;
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
-  quotes: "\201C""\201D""\2018""\2019";
+  color: black;
+  box-shadow: 2px 3px 20px black, 0 0 60px #8a4d0f inset;
+  background: #fffef0;
+  filter: url(#wavy2);
 }
 blockquote:before {
-  color: #ccc;
+  color: black;
   content: open-quote;
   font-size: 4em;
   line-height: 0.1em;
@@ -1093,7 +1092,7 @@ blockquote:before {
   vertical-align: -0.4em;
 }
 blockquote::after {
-  color: #ccc;
+  color: black;
   content: close-quote;
   font-size: 4em;
   line-height: 0.1em;
