--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -108,7 +108,7 @@ body {
 .siteLogo {
   font-family: "Metal Mania", cursive;
   font-size: 80px;
-  background: -webkit-linear-gradient(#010103, #333);
+  background: -webkit-linear-gradient(rgb(31, 31, 31), #333);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
