--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -777,8 +777,9 @@ hr {
   transition: all 0.2s ease-in-out;
 }
 .searchPage {
-  width: 50%;
+  width: 90%;
   margin: auto;
+  align-items: center;
   padding: 2%;
 }
 .sentBtn {
