--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -1103,3 +1103,17 @@ blockquote::after {
 blockquote p {
   display: inline;
 }
+.loading-video {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100000000;
+}
+
+.loading-video video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
